force-app/main/default/objects/Time_Record_Rollup_Day__c/Time_Record_Rollup_Day__c.object-meta.xml
<CustomObject>
    <description>Used to aggregate the time record data to a single day.
The largest activity for the day is how all the time for the day will be categorized.
Should only have one record/client/user for each day</description>
    <label>Time Record Rollup Day</label>
    <nameField>
        <displayFormat>TRRD-{00000000}</displayFormat>
        <label>Time Record Rollup Day Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Record Rollup Days</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>