force-app/main/default/objects/Time_Record_Rollup_Day__c/fields/Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>Activity_Date__c</fullName>
    <label>Activity Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>