force-app/main/default/objects/Time_Record_Rollup_Day__c/fields/Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>Activity_Type__c</fullName>
    <label>Activity Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Receive/Catalogue/Review Data</fullName>
            </value>
            <value>
                <fullName>Conduct Research</fullName>
            </value>
            <value>
                <fullName>Conduct Analysis</fullName>
            </value>
            <value>
                <fullName>Develop Work Product</fullName>
            </value>
            <value>
                <fullName>Deposition (including preparation for)</fullName>
            </value>
            <value>
                <fullName>Testimony (including preparation for)</fullName>
            </value>
            <value>
                <fullName>Vacation</fullName>
            </value>
            <value>
                <fullName>Counsel/Client Communications</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>