force-app/main/default/objects/Time_Record_Rollup_Day__c/fields/Billable_Staff_Initials__c.field-meta.xml
<CustomField>
    <fullName>Billable_Staff_Initials__c</fullName>
    <description>Used for reporting/dashboard</description>
    <formula>Time_Record_Period_Staff_Member__r.Contact__r.Initials__c + &apos; - &apos; +  IF(Is_Billable__c, &apos;Chargeable&apos;, &apos;Non-Charge&apos;)</formula>
    <label>Billable Staff Initials</label>
    <type>Text</type>
</CustomField>