force-app/main/default/objects/Time_Record_Rollup_Day__c/fields/Engagement__c.field-meta.xml
<CustomField>
    <fullName>Engagement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Engagement</label>
    <referenceTo>Engagement__c</referenceTo>
    <relationshipLabel>Time Record Rollup Days</relationshipLabel>
    <relationshipName>Time_Record_Rollup_Days</relationshipName>
    <type>Lookup</type>
</CustomField>