force-app/main/default/objects/Time_Record_Rollup_Day__c/fields/Hours_Worked__c.field-meta.xml
<CustomField>
    <fullName>Hours_Worked__c</fullName>
    <label>Hours Worked</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>