force-app/main/default/objects/Time_Record_Rollup_Day__c/fields/Hours_Worked_Billable__c.field-meta.xml
<CustomField>
    <fullName>Hours_Worked_Billable__c</fullName>
    <formula>IF(Is_Billable__c,Hours_Worked__c,0.0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hours Worked Billable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>