force-app/main/default/objects/Time_Record_Rollup_Day__c/fields/Hours_Worked_Non_Billable__c.field-meta.xml
<CustomField>
    <fullName>Hours_Worked_Non_Billable__c</fullName>
    <formula>IF(Is_Billable__c, 0.0, Hours_Worked__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hours Worked Non Billable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>