force-app/main/default/objects/Time_Record_Rollup_Day__c/fields/Is_Billable__c.field-meta.xml
<CustomField>
    <fullName>Is_Billable__c</fullName>
    <description>Indicates if the time is billable</description>
    <formula>IF(Special_Project__c != null, Special_Project__r.Is_Billable__c, true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Billable</label>
    <type>Checkbox</type>
</CustomField>