force-app/main/default/objects/Time_Record_Rollup_Day__c/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <description>Record key - combines Activity Date, User and Related Object Id</description>
    <externalId>true</externalId>
    <label>Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>