force-app/main/default/objects/Time_Record_Rollup_Day__c/fields/Staff_Title__c.field-meta.xml
<CustomField>
    <fullName>Staff_Title__c</fullName>
    <label>Staff Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>