force-app/main/default/objects/Time_Record_Rollup_Day__c/fields/SummaryNonBillableHours__c.field-meta.xml
<CustomField>
    <fullName>SummaryNonBillableHours__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This field is used to capture the total hours logged by a user, per day, that are non-billable.</description>
    <label>Summary Non-Billable Hours</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>