force-app/main/default/objects/Time_Record_Rollup_Day__c/fields/Time_Record_Period_Staff_Member__c.field-meta.xml
<CustomField>
    <fullName>Time_Record_Period_Staff_Member__c</fullName>
    <description>Related time record period staff member record</description>
    <label>Time Record Period Staff Member</label>
    <referenceTo>Time_Record_Period_Staff_Member__c</referenceTo>
    <relationshipLabel>Time Record Rollup Days</relationshipLabel>
    <relationshipName>Time_Record_Rollup_Days</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>